--- a/exps.ipynb
+++ b/exps.ipynb
@@ -9,6 +9,7 @@
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
     "import json\n",
+    "import re\n",
     "import warnings\n",
     "warnings.simplefilter(\"ignore\")\n",
     "\n",
@@ -22,6 +23,9 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import f1_score\n",
+    "\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import WordNetLemmatizer\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from catboost import CatBoostClassifier"
@@ -58,7 +62,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4702/4702 [00:02<00:00, 2288.63it/s]\n"
+      "100%|██████████| 4702/4702 [00:01<00:00, 2639.74it/s]\n"
      ]
     }
    ],
@@ -90,6 +94,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_text(text):\n",
+    "    text = re.sub(\"[^ a-zA-Z0-9]\", \" \", text)  # deleting everything besides whitespaces and letters\n",
+    "    text = re.sub(\" +\", \" \", text)  # merging multiple whitespaces into one\n",
+    "    text = text.lower()  # text to lowercase\n",
+    "\n",
+    "    stop_words = stopwords.words('english')\n",
+    "    text = [word for word in text.split(\" \") if not word in stop_words]  # removing stop_words\n",
+    "\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    text = [lemmatizer.lemmatize(token) for token in text]  # lemmatization\n",
+    "    return ' '.join(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in (\"title\", \"plot\"):\n",
+    "    movie_info[col] = movie_info[col].map(clean_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -98,31 +131,60 @@
      "output_type": "stream",
      "text": [
       "retrieving image embeddings for resnet50_features\n",
-      "retrieving text embeddings for bag_of_words\n",
-      "Using resnet50_features + bag_of_words + <lambda>\n",
-      "Embeds size: 27598\n",
-      "Score 0.06191386135236041\n",
-      "retrieving text embeddings for tf_idf\n",
-      "Using resnet50_features + tf_idf + <lambda>\n",
-      "Embeds size: 27598\n",
-      "Score 0.06213319344385634\n",
       "retrieving text embeddings for spacy_appoach\n",
-      "Using resnet50_features + spacy_appoach + <lambda>\n",
-      "Embeds size: 2240\n",
-      "Score 0.0682355012858485\n",
-      "0.0682355012858485 ['resnet50_features', 'spacy_appoach', '<lambda>']\n"
+      "Using resnet50_features + spacy_appoach + LogisticRegression\n",
+      "Embeds size: 2240\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 24/24 [03:13<00:00,  8.08s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score 0.6305036171827988\n",
+      "Using resnet50_features + spacy_appoach + CatBoostClassifier\n",
+      "Embeds size: 2240\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 24/24 [10:17<00:00, 25.72s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score 0.5968512397586431\n",
+      "0.6305036171827988 ['resnet50_features', 'spacy_appoach', 'LogisticRegression']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "image_methods = [resnet50_features]\n",
     "text_methods = [bag_of_words, tf_idf, spacy_appoach]\n",
-    "classif_methods = [LogisticRegression, lambda: CatBoostClassifier(random_state=42, silent=True, iterations=100)]\n",
+    "classif_methods = [LogisticRegression, CatBoostClassifier]\n",
+    "classif_methods_params = [{\"random_state\": 0, \"solver\": \"saga\"}, {\"random_state\": 0, \"silent\": True, \"iterations\": 100}]\n",
     "\n",
     "val_size = 0.2\n",
     "\n",
     "y = movie_info[classes].values\n",
-    "y_train, y_val = train_test_split(y, test_size=val_size)\n",
+    "y_train, y_val = train_test_split(y, test_size=val_size, random_state=0)\n",
     "\n",
     "best_score = - np.inf\n",
     "for im in image_methods:\n",
@@ -139,7 +201,7 @@
     "        image_embeds = np.concatenate(image_embeds, axis=0)\n",
     "        np.save(embeds_dir / f\"{im.__name__}.npy\", image_embeds)\n",
     "\n",
-    "    for tm in text_methods:\n",
+    "    for tm in text_methods[2:]:\n",
     "        print(f\"retrieving text embeddings for {tm.__name__}\")\n",
     "        if (embeds_dir / f\"{tm.__name__}_title.npy\").exists():\n",
     "            tm_title_embeds = np.load(embeds_dir / f\"{tm.__name__}_title.npy\")\n",
@@ -151,14 +213,14 @@
     "            np.save(embeds_dir / f\"{tm.__name__}_plot.npy\", tm_plot_embeds)\n",
     "\n",
     "        X = np.column_stack([image_embeds, tm_title_embeds, tm_plot_embeds])\n",
-    "        X_train, X_val = train_test_split(X, test_size=val_size)\n",
-    "        for cm in classif_methods[1:2]:\n",
+    "        X_train, X_val = train_test_split(X, test_size=val_size, random_state=0)\n",
+    "        for cm, cmp in zip(classif_methods, classif_methods_params):\n",
     "            print(f\"Using {im.__name__} + {tm.__name__} + {cm.__name__}\")\n",
     "            print(f\"Embeds size: {X.shape[1]}\")\n",
     "\n",
-    "            models = [cm() for _ in range(len(classes))]\n",
+    "            models = [cm(**cmp) for _ in range(len(classes))]\n",
     "            score = 0\n",
-    "            for i in range(len(models)):\n",
+    "            for i in tqdm(range(len(models))):\n",
     "                models[i].fit(X_train, y_train[:, i])\n",
     "                score += f1_score(y_val[:, i], models[i].predict(X_val))\n",
     "            score /= len(models)\n",
@@ -177,7 +239,7 @@
     "\n",
     "resnet50_features | 2048\n",
     "\n",
-    "bag_of_words, tf-idf | 25550\n",
+    "bag_of_words, tf-idf | 22997\n",
     "\n",
     "spacy | 192"
    ]
@@ -186,24 +248,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pipeline                                              | mean f1 score\n",
+    "Pipeline                                               | mean f1 score\n",
     "\n",
-    "resnet50_features + bag_of_words + LogisticRegression | 0.12156873831875155\n",
+    "resnet50_features + bag_of_words + LogisticRegression  | 0.67489\n",
     "\n",
-    "resnet50_features + tf_idf + LogisticRegression       | 0.14007789891666134\n",
+    "resnet50_features + tf_idf + LogisticRegression        | 0.63171\n",
     "\n",
-    "resnet50_features + spacy_appoach + LogisticRegression| 0.133247543506684\n",
+    "resnet50_features + spacy_appoach + LogisticRegression | 0.63050\n",
     "\n",
-    "resnet50_features + bag_of_words + CatBoostClassifier | 0.06191386135236041\n",
+    "resnet50_features + bag_of_words + CatBoostClassifier  | 0.57421\n",
     "\n",
-    "resnet50_features + tf_idf + CatBoostClassifier       | 0.06213319344385634\n",
+    "resnet50_features + tf_idf + CatBoostClassifier        | 0.57266\n",
     "\n",
-    "resnet50_features + spacy_appoach + CatBoostClassifier| 0.0682355012858485"
+    "resnet50_features + spacy_appoach + CatBoostClassifier | 0.59685"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -241,53 +303,229 @@
      "output_type": "stream",
      "text": [
       "retrieving image embeddings for resnet50_features\n",
-      "retrieving text embeddings for bag_of_words\n",
-      "Epoch #1 loss:  0.39641\n",
-      "Epoch #2 loss:  0.16206\n",
-      "Epoch #3 loss:  0.14414\n",
-      "Epoch #4 loss:  0.14372\n",
-      "Epoch #5 loss:  0.14393\n",
-      "Score: 0.030349099099099094\n",
-      "retrieving text embeddings for tf_idf\n",
-      "Epoch #1 loss:  0.41277\n",
-      "Epoch #2 loss:  0.17078\n",
-      "Epoch #3 loss:  0.14486\n",
-      "Epoch #4 loss:  0.14307\n"
+      "retrieving text embeddings for bag_of_words\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x0000016B6C6AA5E0>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Владислав\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\", line 1466, in __del__\n",
-      "    self._shutdown_workers()\n",
-      "  File \"c:\\Users\\Владислав\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\", line 1424, in _shutdown_workers\n",
-      "    if self._persistent_workers or self._workers_status[worker_id]:\n",
-      "AttributeError: '_MultiProcessingDataLoaderIter' object has no attribute '_workers_status'\n",
-      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x0000016B6C6AA5E0>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\Владислав\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\", line 1466, in __del__\n",
-      "    self._shutdown_workers()\n",
-      "  File \"c:\\Users\\Владислав\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\torch\\utils\\data\\dataloader.py\", line 1424, in _shutdown_workers\n",
-      "    if self._persistent_workers or self._workers_status[worker_id]:\n",
-      "AttributeError: '_MultiProcessingDataLoaderIter' object has no attribute '_workers_status'\n"
+      "                                               \r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch #5 loss:  0.14470\n",
-      "Score: 0.030349099099099094\n",
-      "retrieving text embeddings for spacy_appoach\n",
-      "Epoch #1 loss:  0.39228\n",
-      "Epoch #2 loss:  0.15688\n",
-      "Epoch #3 loss:  0.14460\n",
-      "Epoch #4 loss:  0.14381\n",
-      "Epoch #5 loss:  0.14393\n",
-      "Score: 0.030349099099099094\n"
+      "Epoch #1 loss:  0.21696\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #2 loss:  0.14580\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #3 loss:  0.14559\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #4 loss:  0.14557\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #5 loss:  0.14485\n",
+      "Score: 0.03177733946964716\n",
+      "retrieving text embeddings for tf_idf\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #1 loss:  0.22168\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #2 loss:  0.14566\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #3 loss:  0.14548\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #4 loss:  0.14552\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                               \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #5 loss:  0.14576\n",
+      "Score: 0.03177733946964716\n",
+      "retrieving text embeddings for spacy_appoach\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #1 loss:  0.21506\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #2 loss:  0.14554\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #3 loss:  0.14568\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #4 loss:  0.14524\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch #5 loss:  0.14566\n",
+      "Score: 0.03177733946964716\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r"
      ]
     }
    ],
@@ -298,7 +536,6 @@
     "val_size = 0.2\n",
     "\n",
     "y = movie_info[classes].values\n",
-    "y_train, y_val = train_test_split(y, test_size=val_size)\n",
     "\n",
     "best_score = - np.inf\n",
     "for im in image_methods:\n",
@@ -327,12 +564,12 @@
     "            np.save(embeds_dir / f\"{tm.__name__}_plot.npy\", tm_plot_embeds)\n",
     "\n",
     "        X = np.column_stack([image_embeds, tm_title_embeds, tm_plot_embeds])\n",
-    "        X_train, X_val = train_test_split(X, test_size=val_size)\n",
+    "        X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=val_size, random_state=0)\n",
     "\n",
     "        # to tensors\n",
-    "        batch_size = 512\n",
-    "        train_dl = torch.utils.data.DataLoader(list(zip(X_train, y_train)), batch_size=batch_size, shuffle=True, num_workers=2)\n",
-    "        val_dl = torch.utils.data.DataLoader(list(zip(X_val, y_val)), batch_size=batch_size, shuffle=False, num_workers=2)\n",
+    "        batch_size = 128\n",
+    "        train_dl = torch.utils.data.DataLoader(list(zip(X_train, y_train)), batch_size=batch_size, shuffle=True)\n",
+    "        val_dl = torch.utils.data.DataLoader(list(zip(X_val, y_val)), batch_size=batch_size, shuffle=False)\n",
     "\n",
     "        # training\n",
     "        device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -344,7 +581,7 @@
     "        model.train()\n",
     "        for epoch in range(1, epochs + 1):\n",
     "            losses.append(0)\n",
-    "            for X_cur, y_cur in train_dl:\n",
+    "            for X_cur, y_cur in tqdm(train_dl, leave=False):\n",
     "                model.zero_grad()\n",
     "                y_hat = model(X_cur.float().to(device))\n",
     "                loss = criterion(y_cur.float().to(device), y_hat)\n",
@@ -393,11 +630,11 @@
    "source": [
     "Pipeline with SimpleNet          | mean f1 score\n",
     "\n",
-    "resnet50_features + bag_of_words | 0.030349099099099094\n",
+    "resnet50_features + bag_of_words | 0.03177\n",
     "\n",
-    "resnet50_features + tf_idf       | 0.030349099099099094\n",
+    "resnet50_features + tf_idf       | 0.03177\n",
     "\n",
-    "resnet50_features + spacy        | 0.030349099099099094"
+    "resnet50_features + spacy        | 0.03177"
    ]
   },
   {
