vis added, mistype corrected

--- a/exps.ipynb
+++ b/exps.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "from PIL import Image\n",
     "\n",
-    "from text_features import bag_of_words, tf_idf, spacy_appoach\n",
+    "from text_features import bag_of_words, tf_idf, spacy_approach\n",
     "from img_features import resnet50_features\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -177,7 +177,7 @@
    ],
    "source": [
     "image_methods = [resnet50_features]\n",
-    "text_methods = [bag_of_words, tf_idf, spacy_appoach]\n",
+    "text_methods = [bag_of_words, tf_idf, spacy_approach]\n",
     "classif_methods = [LogisticRegression, CatBoostClassifier]\n",
     "classif_methods_params = [{\"random_state\": 0, \"solver\": \"saga\"}, {\"random_state\": 0, \"silent\": True, \"iterations\": 100}]\n",
     "\n",
@@ -254,13 +254,13 @@
     "\n",
     "resnet50_features + tf_idf + LogisticRegression        | 0.63171\n",
     "\n",
-    "resnet50_features + spacy_appoach + LogisticRegression | 0.63050\n",
+    "resnet50_features + spacy_approach + LogisticRegression | 0.63050\n",
     "\n",
     "resnet50_features + bag_of_words + CatBoostClassifier  | 0.57421\n",
     "\n",
     "resnet50_features + tf_idf + CatBoostClassifier        | 0.57266\n",
     "\n",
-    "resnet50_features + spacy_appoach + CatBoostClassifier | 0.59685"
+    "resnet50_features + spacy_approach + CatBoostClassifier | 0.59685"
    ]
   },
   {
@@ -531,7 +531,7 @@
    ],
    "source": [
     "image_methods = [resnet50_features]\n",
-    "text_methods = [bag_of_words, tf_idf, spacy_appoach]\n",
+    "text_methods = [bag_of_words, tf_idf, spacy_approach]\n",
     "\n",
     "val_size = 0.2\n",
     "\n",
